--- a/fpm.toml
+++ b/fpm.toml
@@ -1,25 +1,23 @@
-name = "forgex"
+name = "forgex-cli"
 version = "3.4.0"
 license = "MIT"
 author = "Amasaki Shinobu"
 maintainer = "amasaki203@gmail.com"
 copyright = "Copyright 2023-2024, Amasaki Shinobu"
-homepage = "https://github.com/shinobuamasaki/forgex"
+homepage = "https://github.com/shinobuamasaki/forgex-cli"
 [build]
 auto-executables = true
 auto-tests = true
 auto-examples = true
 module-naming = false
 [install]
-library = true
+library = false
 [fortran]
 implicit-typing = false
 implicit-external = false
 source-form = "free"
-[[executable]]
-name = "forgex-cli"
-source-dir = "app"
-main = "forgex-cli.f90"
+[dependencies]
+forgex = { git = "https://github.com/ShinobuAmasaki/forgex", branch = "exp"}
 [preprocess]
 [preprocess.cpp]
 macros = ["RELEASE"] # This macro is not defined in the source codes, but it tells fpm to use the preprocessor.
