--- a/fpm.toml
+++ b/fpm.toml
@@ -17,8 +17,8 @@ implicit-typing = false
 implicit-external = false
 source-form = "free"
 [dependencies]
-forgex = { git = "https://github.com/ShinobuAmasaki/forgex", tag = "v3.5"}
-# forgex = { git = "https://github.com/ShinobuAmasaki/forgex", branch = "exp"}
+# forgex = { git = "https://github.com/ShinobuAmasaki/forgex", tag = "v3.5"}
+forgex = { git = "https://github.com/ShinobuAmasaki/forgex", branch = "exp"}
 [preprocess]
 [preprocess.cpp]
 suffixes = ["f90", "F90"]
